force-app/main/default/objects/Applicant__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <label>Affiliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliation_Type</valueSetName>
    </valueSet>
</CustomField>