force-app/main/default/objects/Applicant__c/fields/Applicable_sources_of_income__c.field-meta.xml
<CustomField>
    <fullName>Applicable_sources_of_income__c</fullName>
    <label>Applicable sources of income</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Net Profit (Sole Trader)</fullName>
            </value>
            <value>
                <fullName>Director&#39;s Emoluments (Director)</fullName>
            </value>
            <value>
                <fullName>Share of Profits (Partnership)</fullName>
            </value>
            <value>
                <fullName>Share of Profit (Shareholder)</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Property Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>