force-app/main/default/objects/Applicant__c/fields/Assessment_of_Applicant_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Assessment_of_Applicant_Net_Worth__c</fullName>
    <label>Assessment of Applicant Net Worth</label>
    <picklist>
        <picklistValues>
            <fullName>Strong net worth</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Reasonable net worth</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Low Net Worth</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>New worth not commensurate with age and earning</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>