force-app/main/default/objects/Applicant__c/fields/Bankrupt_in_Last_7_Years__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt_in_Last_7_Years__c</fullName>
    <label>Bankrupt in Last 7 Years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>