force-app/main/default/objects/Applicant__c/fields/Basic_monthly_pay_no_allowances__c.field-meta.xml
<CustomField>
    <fullName>Basic_monthly_pay_no_allowances__c</fullName>
    <description>Basic monthly pay of a JN group Employee excluding allowances</description>
    <label>Basic monthly pay (no allowances)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>