force-app/main/default/objects/Applicant__c/fields/Cell_Phone_Landline_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone_Landline_Monthly_After_Loan__c</fullName>
    <label>Cell Phone/Landline Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>