force-app/main/default/objects/Applicant__c/fields/Cooking_Gas_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Cooking_Gas_Monthly_After_Loan__c</fullName>
    <label>Cooking Gas Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>