force-app/main/default/objects/Applicant__c/fields/Credit_History_in_last_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Credit_History_in_last_24_Months__c</fullName>
    <label>Credit History in last 24 Months</label>
    <picklist>
        <picklistValues>
            <fullName>No Delinquency</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>1 - 10 Days Delinquent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>11 - 30 Days Delinquent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>31 - 60 Days Delinquent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>61 - 90 Days Delinquent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Over 90 Days Delinquent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No Credit History</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>