force-app/main/default/objects/Applicant__c/fields/CRIF_Rating__c.field-meta.xml
<CustomField>
    <fullName>CRIF_Rating__c</fullName>
    <label>CRIF Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Rating_Scale</valueSetName>
    </valueSet>
</CustomField>