force-app/main/default/objects/Applicant__c/fields/Director_s_Emoluments_Director__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Emoluments_Director__c</fullName>
    <label>Director’s Emoluments - Director</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>