force-app/main/default/objects/Applicant__c/fields/Director_s_Emoluments_DirectorC__c.field-meta.xml
<CustomField>
    <fullName>Director_s_Emoluments_DirectorC__c</fullName>
    <formula>Director_s_Emoluments_Director__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director’s Emoluments - DirectorC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>