force-app/main/default/objects/Applicant__c/fields/Education_Tax_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Education_Tax_Monthly_Prior_Loan__c</fullName>
    <label>Education Tax Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>