force-app/main/default/objects/Applicant__c/fields/Electricity_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Monthly_Prior_Loan__c</fullName>
    <label>Electricity Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>