force-app/main/default/objects/Applicant__c/fields/Existing_Real_Estate_Rental_I__c.field-meta.xml
<CustomField>
    <fullName>Existing_Real_Estate_Rental_I__c</fullName>
    <description>(where rental property not treated as business)</description>
    <label>Existing Real Estate Rental I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>