force-app/main/default/objects/Applicant__c/fields/Existing_Real_Estate_Rental_IC__c.field-meta.xml
<CustomField>
    <fullName>Existing_Real_Estate_Rental_IC__c</fullName>
    <formula>Existing_Real_Estate_Rental_I__c  * 0.7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Real Estate Rental IC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>