force-app/main/default/objects/Applicant__c/fields/Existing_Real_estate_Rental_II__c.field-meta.xml
<CustomField>
    <fullName>Existing_Real_estate_Rental_II__c</fullName>
    <label>Existing Real estate Rental II</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>