force-app/main/default/objects/Applicant__c/fields/Existing_Real_estate_Rental_II_C__c.field-meta.xml
<CustomField>
    <fullName>Existing_Real_estate_Rental_II_C__c</fullName>
    <formula>Existing_Real_estate_Rental_II__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Real estate Rental II C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>