force-app/main/default/objects/Applicant__c/fields/Food_Cost_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Food_Cost_Monthly_Prior_Loan__c</fullName>
    <label>Food Cost Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>