force-app/main/default/objects/Applicant__c/fields/Gratuity_in_lieu_of_Pension__c.field-meta.xml
<CustomField>
    <fullName>Gratuity_in_lieu_of_Pension__c</fullName>
    <label>Gratuity in lieu of Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>