force-app/main/default/objects/Applicant__c/fields/Gratuity_in_lieu_of_PensionC__c.field-meta.xml
<CustomField>
    <fullName>Gratuity_in_lieu_of_PensionC__c</fullName>
    <formula>Gratuity_in_lieu_of_Pension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gratuity in lieu of PensionC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>