force-app/main/default/objects/Applicant__c/fields/Gross_Monthly_IncomeC__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_IncomeC__c</fullName>
    <formula>IF (  RecordType.Name = &quot;Short Summary of Income&quot;,  
   ( Gross_Monthly_Income__c  +  Other_IncomeC__c ),  

IF (  RecordType.Name = &quot;Full Details Of Income/Living Expenses&quot;, 
   (Salary_and_Allowances_as_per_pay_slips__c + Gratuity_in_lieu_of_Pension__c +  Performance_Based_Pay_Includes_Commissi__c +  Net_Profit_Sole_TraderC__c +  Director_s_Emoluments_Director__c + Share_of_Profit_Partnership__c +  Share_of_Profit_Shareholder__c +  Pension__c +  Existing_Real_Estate_Rental_IC__c +  Existing_Real_estate_Rental_II__c + Projected_Real_Estate_RentalC__c +  Other_IncomeC__c),0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Monthly IncomeC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>