force-app/main/default/objects/Applicant__c/fields/Health_Costs_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Health_Costs_Monthly_Prior_Loan__c</fullName>
    <label>Health Costs Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>