force-app/main/default/objects/Applicant__c/fields/House_Keeping_Costs_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>House_Keeping_Costs_Monthly_After_Loan__c</fullName>
    <label>House Keeping Costs Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>