force-app/main/default/objects/Applicant__c/fields/House_Keeping_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>House_Keeping_Monthly_Prior_Loan__c</fullName>
    <label>House Keeping Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>