force-app/main/default/objects/Applicant__c/fields/Income_Tax_Monthly_Payment_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Monthly_Payment_Prior_Loan__c</fullName>
    <label>Income Tax Monthly Payment Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>