force-app/main/default/objects/Applicant__c/fields/Indicate_Partnership_Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Partnership_Target_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicate Partnership/Target Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>