force-app/main/default/objects/Applicant__c/fields/Internet_Cable_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Internet_Cable_Monthly_After_Loan__c</fullName>
    <label>Internet/Cable Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>