force-app/main/default/objects/Applicant__c/fields/Is_applicant_KYC_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Is_applicant_KYC_Compliant__c</fullName>
    <label>Is applicant KYC Compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>