force-app/main/default/objects/Applicant__c/fields/JN_Employee_Loan_Benefit__c.field-meta.xml
<CustomField>
    <fullName>JN_Employee_Loan_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will the JN Employee Loan Benefit be applied?*</description>
    <label>JN Employee Loan Benefit</label>
    <type>Checkbox</type>
</CustomField>