force-app/main/default/objects/Applicant__c/fields/JN_Group_Employee__c.field-meta.xml
<CustomField>
    <fullName>JN_Group_Employee__c</fullName>
    <label>JN Group Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>