force-app/main/default/objects/Applicant__c/fields/Judgements_Filed__c.field-meta.xml
<CustomField>
    <fullName>Judgements_Filed__c</fullName>
    <label>Judgements Filed</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>