force-app/main/default/objects/Applicant__c/fields/Lawsuits_or_Claims__c.field-meta.xml
<CustomField>
    <fullName>Lawsuits_or_Claims__c</fullName>
    <label>Lawsuits or Claims?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>