force-app/main/default/objects/Applicant__c/fields/Market_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Number__c</fullName>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>