force-app/main/default/objects/Applicant__c/fields/Monthly_Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Living_Expenses__c</fullName>
    <label>Monthly Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>