force-app/main/default/objects/Applicant__c/fields/Motor_V_Maintenance_Monthly_Before_Loan__c.field-meta.xml
<CustomField>
    <fullName>Motor_V_Maintenance_Monthly_Before_Loan__c</fullName>
    <label>Motor V Maintenance Monthly Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>