force-app/main/default/objects/Applicant__c/fields/Motor_Vehicle_Fitness_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Fitness_Monthly_After_Loan__c</fullName>
    <label>Motor Vehicle Fitness Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>