force-app/main/default/objects/Applicant__c/fields/Motor_Vehicle_Loan_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Loan_Balance_Number__c</fullName>
    <label>Motor Vehicle Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>