force-app/main/default/objects/Applicant__c/fields/Motor_Vehicle_Market_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Market_Value_Number__c</fullName>
    <label>Motor Vehicle Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>