force-app/main/default/objects/Applicant__c/fields/Net_Profit_Sole_Trader__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Sole_Trader__c</fullName>
    <label>Net Profit - Sole Trader</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>