force-app/main/default/objects/Applicant__c/fields/Net_Profit_Sole_TraderC__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Sole_TraderC__c</fullName>
    <formula>Net_Profit_Sole_Trader__c  * 0.7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit - Sole TraderC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>