force-app/main/default/objects/Applicant__c/fields/NHT_Contributions_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>NHT_Contributions_Monthly_Prior_Loan__c</fullName>
    <label>NHT Contributions Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>