force-app/main/default/objects/Applicant__c/fields/NIS_Contribution_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>NIS_Contribution_Monthly_Prior_Loan__c</fullName>
    <label>NIS Contribution Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>