force-app/main/default/objects/Applicant__c/fields/Other_Asset_Market_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Asset_Market_Value_Number__c</fullName>
    <label>Other Asset Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>