force-app/main/default/objects/Applicant__c/fields/Other_IncomeC__c.field-meta.xml
<CustomField>
    <fullName>Other_IncomeC__c</fullName>
    <formula>Other_Income__c * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other IncomeC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>