force-app/main/default/objects/Applicant__c/fields/Other_Monthly_Expenses_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Expenses_Prior_Loan__c</fullName>
    <label>Other Monthly Expenses  Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>