force-app/main/default/objects/Applicant__c/fields/Other_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Income__c</fullName>
    <label>Other Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>