force-app/main/default/objects/Applicant__c/fields/Other_Personal_Family_Costs_Prior_After__c.field-meta.xml
<CustomField>
    <fullName>Other_Personal_Family_Costs_Prior_After__c</fullName>
    <label>Other Personal/Family Costs After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>