force-app/main/default/objects/Applicant__c/fields/Other_Transport_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Other_Transport_Monthly_After_Loan__c</fullName>
    <label>Other Transport Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>