force-app/main/default/objects/Applicant__c/fields/Other_Utilities_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Other_Utilities_Monthly_Prior_Loan__c</fullName>
    <label>Other Utilities Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>