force-app/main/default/objects/Applicant__c/fields/Overall_Credit_Bureau_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Credit_Bureau_Rating__c</fullName>
    <formula
  >IF(NOT(ISBLANK(Overall_Rating__c)), Overall_Rating__c,&#39;Not Populated&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Credit Bureau Rating</label>
    <type>Text</type>
</CustomField>