force-app/main/default/objects/Applicant__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <description>Describes the overall credit bureau rating.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Overall Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>